@@ -19,6 +19,8 @@ Revision:
 * #167: Location shows a Google Maps locator image even if no location is provided | ticket from addons (Phoenyx)
 * #241: Fatal error: Class 'ProfileControlerTribes' not found when creating a comment on a tribe | ticket from addons (Phoenyx)
 * #244: login_name in edituser.php is always 'login_name' | ticket from addons (Phoenyx)
+* #166: some strange values for "settings" | ticket from addons (Phoenyx)
+* #243: missing values for selection on comment and notification options | ticket from addons (Phoenyx)
 
 ===2009-06-20 : 1.2 Alpha 2.1 ===
 '''Fixed'''
